@@ -5,6 +5,8 @@
 Merged from 2.2:
  * Add seconds to cqlsh tracing session duration (CASSANDRA-11753)
  * Prohibit Reversed Counter type as part of the PK (CASSANDRA-9395)
+Merged from 2.1:
+ * Set default streaming_socket_timeout_in_ms to 48 hours (CASSANDRA-11826)
 
 3.0.6
  * Disallow creating view with a static column (CASSANDRA-11602)
